--- a/config.json
+++ b/config.json
@@ -6,12 +6,12 @@
 	],
 	"Propietario": [
 		[
-			"51991378809",
-			"Matt_Mdz",
+			"50660280373",
+			"Castle",
 			true
 		],
 		[
-			"51999999999",
+			"50660280373",
 			"you",
 			false
 		]
